Simplify logic in URIConverter.
Replace if statement with enhanced switch statement.

Fix Java 21 compiler deprecations (use of URL constructor) in URIConverterUnitTests.